[package]
name = "biter"
version = "0.1.0"
edition = "2021"




[dependencies]
actix-cors = "0.5"
actix-web = "3"
actix = "0.13"
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
pretty_env_logger = "0.4.0"
bytes = "1"
hex = "0.4"
dotenv = "0.15"
log = "0.4"
jsonwebtoken = "8"
mongodb = { version = "2", default-features = false, features = ["sync"] }
rust-argon2 = "1"




[[bin]]
name = "biter"
path = "src/main.rs"
